# gdbus_sample

./: CMakeLists.txt  README.md  client.c  com.example.helloWorld.xml  helloWorld.c  helloWorld.h  server.c
